Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!


* Verilator 3.833 devel

***   Support += and -= in standard for loops, bug463. [Alex Solomatnikov]

***   Fix processing unused parametrized modules, bug469, bug470.  [Alex Solomatnikov]

****  Fix signed array warning, bug456. [Alex Solomatnikov]

****  Fix genvar and begin under generate, bug461.  [Alex Solomatnikov]

****  Fix real constant parameter functions, bug475.  [Alex Solomatnikov]

****  Fix and document --gdb option, bug454. [Jeremy Bennett]

****  Fix OpenSolaris compile error. [Sanjay Singh]


* Verilator 3.832 2012/03/07

***   Fix memory delayed assignments from multiple clock domains. [Andrew Ling]

***   Support arrayed SystemC I/O pins.  [Christophe Joly]

***   Report MULTIDRIVEN on memories set in multiple clock domains.

***   Report ENDLABEL on mismatching end labels, bug450. [Iztok Jeras]

****  Fix expansion of back-slashed escaped macros, bug441. [Alberto Del Rio]

****  Fix inheriting real and signed type across untyped parameters.

****  Fix core dump with over 100 deep UNOPTFLAT, bug432. [Joe Eiler]

****  Fix false command not found warning in makefiles. [Ruben Diez]

****  Fix hang when functions inside begin block. [David Welch]

****  Fix hang on recursive substitution `defines, bug443. [Alex Solomatnikov]


* Verilator 3.831 2012/01/20

**    Support SystemC 2.3.0 prerelease.  This requires setting the new
      SYSTEMC_INCLUDE and SYSTEMC_LIBDIR variables in place of now
      deprecated SYSTEMC and SYSTEMC_ARCH.  [Iztok Jeras]

****  Suppress VARHIDDEN on dpi import arguments.  [Ruben Diez]

****  Support "generate for (genvar i=0; ...".  [David Kravitz]

****  Fix dpi exports with > 32 bit but < 64 bit args, bug423. [Chandan Egbert]

****  Fix array of instantiations with sub-range output, bug414. [Jeremy Bennett]
